# JZPlayer

./: README.md
android/: settings.gradle
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/cpp/: CMakeLists.txt  native-lib.cpp  util.h
android/app/src/main/cpp/includes/: ff_pluse.h
android/app/src/main/cpp/includes/libavutil/: ffversion.h
android/app/src/main/java/org/jzvd/jzplayer/: JZPlayer.kt  MainActivity.kt
android/app/src/main/res/layout/: activity_main.xml
android/app/src/main/res/values/: strings.xml  themes.xml
android/app/src/main/res/values-night/: themes.xml
android/gradle/wrapper/: gradle-wrapper.properties
jzmpeg/: L06_audio_video_sync.h  jzplayer.c  jzplayer.h  pkt_frm_list.c  pkt_frm_list.h
macos/: CMakeLists.txt  main.c
